@@ -223,6 +223,12 @@ class AppDocupdate extends JApplicationCli
 
 		// Set the current directory.
 		$this->set('cwd', getcwd());
+
+		// Work around Joomla! 3.4.7's JSession bug
+		if (version_compare(JVERSION, '3.4.7', 'ge'))
+		{
+			JFactory::getSession()->restart();
+		}
 	}
 
 	/**
