@@ -4,10 +4,11 @@ DocImport 1.1.0
 - Removed dysfunctional URL cache
 + Check for obsolete PHP versions and printing a warning
 + You can configure an alternate directory for your XML books
+# [HIGH] Joomla! 3.4.7 has a major bug which may prevent CLI (CRON) scripts from executing
+# [HIGH] Problems when artcile slugs begin with the same string, e.g. "foo" and "foobar"
 # [LOW] Only one new category is added while folders are scanned when visiting the control panle
 # [LOW] Improved display of back-end lists
 # [LOW] Notice thrown by the auto-update CLI script
-# [HIGH] Problems when artcile slugs begin with the same string, e.g. "foo" and "foobar"
 
 DocImport 1.0.13
 ================================================================================
